@@ -1,7 +1,6 @@
 package team.startup.gwangsan.domain.notice.service.impl;
 
 import lombok.RequiredArgsConstructor;
-import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
@@ -23,7 +22,6 @@ import team.startup.gwangsan.domain.place.repository.PlaceRepository;
 import team.startup.gwangsan.global.util.MemberUtil;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -36,47 +34,50 @@ public class FindAllNoticeServiceImpl implements FindAllNoticeService {
     private final PlaceRepository placeRepository;
 
     @Override
-    public List<FindAllNoticeResponse> execute(int page, int size) {
-        Pageable pageable = PageRequest.of(page, size);
+    public List<FindAllNoticeResponse> execute(Long lastId, int size) {
         Member member = memberUtil.getCurrentMember();
-        Page<Notice> notices;
-
         MemberDetail memberDetail = memberDetailRepository.findByMember(member)
                 .orElseThrow(NotFoundMemberDetailException::new);
-
         Place myPlace = memberDetail.getPlace();
+        Pageable pageable = PageRequest.of(0, size);
+
+        List<Notice> notices;
 
         if (member.getRole() == MemberRole.ROLE_HEAD_ADMIN) {
             Head myHead = myPlace.getHead();
-
             List<Place> branchPlaces = placeRepository.findByHead(myHead);
 
-            notices = noticeRepository.findAllByPlaceIn(branchPlaces, pageable);
+            if (lastId == null) {
+                notices = noticeRepository.findByPlaceInOrderByIdDesc(branchPlaces, pageable);
+            } else {
+                notices = noticeRepository.findByPlaceInAndIdLessThanOrderByIdDesc(branchPlaces, lastId, pageable);
+            }
+
         } else {
-            notices = noticeRepository.findAllByPlace(myPlace, pageable);
+            if (lastId == null) {
+                notices = noticeRepository.findByPlaceOrderByIdDesc(myPlace, pageable);
+            } else {
+                notices = noticeRepository.findByPlaceAndIdLessThanOrderByIdDesc(myPlace, lastId, pageable);
+            }
         }
 
-        return notices.getContent().stream()
+        return notices.stream()
                 .map(notice -> {
                     List<NoticeImage> noticeImages = noticeImageRepository.findAllByNotice(notice);
-
                     List<GetImageResponse> imageResponses = noticeImages.stream()
                             .map(ni -> new GetImageResponse(
                                     ni.getImage().getId(),
                                     ni.getImage().getImageUrl()
                             ))
-                            .collect(Collectors.toList());
+                            .toList();
 
                     return new FindAllNoticeResponse(
                             notice.getId(),
                             notice.getTitle(),
                             notice.getContent(),
-                            notice.getPlace().getName(),
-                            notice.getCreatedAt(),
-                            notice.getMember().getRole().name(),
                             imageResponses
                     );
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 }
